updated course work

--- a/Course/Course.tex
+++ b/Course/Course.tex
@@ -148,6 +148,96 @@ x^{(k)} \leftarrow x^{(k-1)} - \tau(D^{(k-1)})^{-1}\mathcal{G}(x^{(k-1)})
 
 Из представленных графиков можно заметить довольно большую область сходимости в окрестности $\gamma = 8.6$, но установить зависмость сходимости затруднительно. Также в этой области алгоритм имеет достаточно хорошую сходимость (до 25 итераций для достижения нормы вектора невязки равной $10^{-7}$).
 
+Оценим включение $Ax \in b$ для исходной ИСЛАУ, а также для задачи соответсующей парметрам, в области которых происходит скачок от разрешимости к неразрешимости.
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=14cm, height=10cm]{fig/g6.png}
+	\caption{Оценка решения для параметров $\gamma = 6, \tau=1$}
+\end{figure}
+
+Вектор решения для данных параметров следующий: 
+\begin{equation}
+x = \begin{pmatrix}
+[-1.2247, 0.5054] \\
+ [18.2644, -9.5175] \\
+ [-0.0282, 1.1608] \\
+ [16.4077, -14.4555] \\
+ [-1.3436, 3.9882] \\
+ [-3.5289, 4.5435] \\
+ [5.4309, -0.6740]
+\end{pmatrix}
+\end{equation}
+
+%\begin{figure}[H]
+%    \centering
+%    \includegraphics[width=14cm, height=10cm]{fig/g9_2.png}
+%	\caption{Оценка решения для параметров $\gamma = 9.2, \tau=0.91$}
+%\end{figure}
+%
+%Вектор решения для данных параметров: \begin{equation}
+%x = \begin{pmatrix}
+%[-1.8707, 1.2695] \\
+% [16.733, -6.3856] \\
+% [0.2361, 1.102] \\
+% [14.6189, -13.6528]\\
+% [-0.333, 3.6156]\\
+% [-2.9465, 3.3163] \\
+% [3.4171, 0.0502]
+%
+%\end{pmatrix}
+%\end{equation}
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=14cm, height=10cm]{fig/g8_6.png}
+	\caption{Оценка решения для параметров $\gamma = 8.6, \tau=0.9$}
+\end{figure}
+
+Вектор решения для данных параметров: \begin{equation}
+x = \begin{pmatrix}
+[-1.8162, 1.2304] \\
+[16.7705, -6.6563] \\
+[0.2307, 1.1036] \\
+[14.8226, -13.6805] \\
+[-0.4364, 3.6254] \\
+[-2.9635, 3.4398] \\
+[3.6198, 0.0410]
+\end{pmatrix}
+\end{equation}
+
+Как видно из графиков во втором случае задача решена более точно. Это возможно связано с тем, что во втором случае $\bold{a}_{77}$  имеет более узкий интервал. 
+
+Рассмотрим также параметры расположенные на другом «береге» от языка нестабильности.
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=14cm, height=10cm]{fig/g8_5.png}
+	\caption{Оценка решения для параметров $\gamma = 8.5, \tau=0.9$}
+\end{figure}
+
+Вектор решения для данных параметров: \begin{equation}
+x = \begin{pmatrix}
+[-1.8065, 1.2234] \\
+[16.7772, -6.7046] \\
+[0.2297, 1.1039] \\
+[14.8590, -13.6854] \\
+[-0.4548, 3.6272] \\
+[-2.9665, 3.4619] \\
+[3.6559, 0.0394]
+\end{pmatrix}
+\end{equation}
+
+Заметно, что различие в решениях довольно маленькие.
+Попробуем взять полученное решение для параметров $\gamma = 8.6 и \tau = 0.9$ как начальное приближение. Построим график для рассмотренной выше области $\gamma$x$\tau$
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=14cm, height=10cm]{fig/newx0.png}
+\end{figure}
+
+Теперь вся рассматриваемая область является областью сходимости алгоритма. Причём она является симметричной относительно $\gamma = 8.6$ по отношению к количеству итераций. Это логично, так как для $\gamma = 8.6$ первое приближение уже является решением
+
 \section{Приложения}
 Репозиторий на GitHub с релизацией: \href{https://github.com/WiillyWonka/Intervals}{github.com}.
 \end{document}
